# luma-stack

./: .dockerignore  .gitignore  Dockerfile  README.md  home.py  pyproject.toml  requirements.txt  ui_helper.py
.streamlit/: config.toml  style.css
data/: Evaluation_Sumsel_data.dbf  Evaluation_Sumsel_data.sbn  Evaluation_Sumsel_data.sbx  Evaluation_Sumsel_data.shp  Evaluation_Sumsel_data.shx  Example_Classification_scheme.csv  Training_Sumsel_Data.dbf  Training_Sumsel_Data.sbn  Training_Sumsel_Data.sbx  Training_Sumsel_Data.shp  Training_Sumsel_Data.shp.xml  Training_Sumsel_Data.shx  area_of_interest.dbf  area_of_interest.sbn  area_of_interest.sbx  area_of_interest.shp  area_of_interest.shx  training_points.dbf  training_points.sbn  training_points.sbx  training_points.shp  training_points.shp.xml  training_points.shx
docs/: Visio_and_code_tags.md  modules.rst  repo_structure.md
docs/source/: conf.py  epistemx.accuracy.rst  epistemx.classification.rst  epistemx.classification_scheme.rst  epistemx.data_acquisition.rst  epistemx.ee_config.rst  epistemx.helpers.rst  epistemx.input_utils.rst  epistemx.predictor.rst  epistemx.rst  epistemx.sample_data.rst  epistemx.sample_data_quality.rst  index.rst
modules/: nav.py
notebooks/: Module_implementation.ipynb
pages/: 1_Module_1_Generate_Image_Mosaic.py  2_Module_2_Classification_scheme.py  3_Module_3_Generate_ROI.py  4_Module_4_Analyze_ROI.py  5_Module_6_Classification_and_LULC_Creation.py  6_Module_7_Thematic_Accuracy.py  7_About.py  sampling_tool_draft.py
src/epistemx/: __init__.py  data_acquisition.py  ee_config.py  (+10 more)
(+8 files in other folders)
