[project]
name = "luma_ge"
version = "0.1.0"
description = "A Python package that serves as the geospatial engine for the Epistem Land Use Mapping for All (Luma) platform."
dependencies = [
    "streamlit",
    "pandas",
    "geopandas",
    "earthengine-api",
    "leafmap",
    "geemap",
    "numpy",
    "matplotlib",
    "seaborn",
    "altair",
    "tqdm",
    "pillow",
    "shapely",
    "ipykernel",
    "streamlit_folium",
    "shapely",
    "pyshp",
    "fiona",
    "rtree"
]
requires-python = ">=3.9"
